--- a/index.html
+++ b/index.html
@@ -25,58 +25,27 @@
 	</header>
 	<main>
 		<div class="ba-grid">
-			<div class="ba-width-1-2">
-				<img src="http://placehold.it/600x150/AFDFBF" alt="600x150">
-			</div>
-			<div class="ba-width-1-2">
-				<img src="http://placehold.it/600x150/68C5B8" alt="600x150">
-			</div>
+			<div class="ba-width-1-2"><img src="http://placehold.it/600x150/AFDFBF" alt="600x150"></div>
+			<div class="ba-width-1-2"><img src="http://placehold.it/600x150/68C5B8" alt="600x150"></div>
 		</div>
 		<div class="ba-grid">
-				<div class="ba-width-1-2">
-					<img src="http://placehold.it/600x320/FA688A/fff" alt="600x320">
-				</div>
-				<div class="ba-width-1-6">
-					<img src="http://placehold.it/200x165/8A95EF/fff" alt="200x165">
-				</div>
-				<div class="ba-width-1-6">
-					<img src="http://placehold.it/200x165/8A95EF/fff" alt="200x165">
-				</div>
-				<div class="ba-width-1-6">
-					<img src="http://placehold.it/200x165/8A95EF/fff" alt="200x165">
-				</div>
-				<div class="ba-width-1-4">
-					<img src="http://placehold.it/300x150/FFC569" alt="300x150">
-				</div>
-				<div class="ba-width-1-4">
-					<img src="http://placehold.it/300x150/FFC569" alt="300x150">
-				</div>
-			</div>
-
-		<div class="ba-grid">
-			<div class="ba-width-1-3">
-				<img src="http://placehold.it/400x185/588CC7/fff" alt="400x185">
-			</div>
-			<div class="ba-width-1-3">
-				<img src="http://placehold.it/400x185/588CC7/fff" alt="400x185">
-			</div>
-			<div class="ba-width-1-6">
-				<img src="http://placehold.it/200x195/588CC7/fff" alt="200x195">
-			</div>
-			<div class="ba-width-1-6">
-				<img src="http://placehold.it/200x195/588CC7/fff" alt="200x195">
-			</div>
+			<div class="ba-width-1-2"><img src="http://placehold.it/600x320/FA688A/fff" alt="600x320"></div>
+			<div class="ba-width-1-6"><img src="http://placehold.it/200x165/8A95EF/fff" alt="200x165"></div>
+			<div class="ba-width-1-6"><img src="http://placehold.it/200x165/8A95EF/fff" alt="200x165"></div>
+			<div class="ba-width-1-6"><img src="http://placehold.it/200x165/8A95EF/fff" alt="200x165"></div>
+			<div class="ba-width-1-4"><img src="http://placehold.it/300x150/FFC569" alt="300x150"></div>
+			<div class="ba-width-1-4"><img src="http://placehold.it/300x150/FFC569" alt="300x150"></div>
 		</div>
 		<div class="ba-grid">
-			<div class="ba-width-1-6">
-				<img src="http://placehold.it/200x145/6652AD/fff" alt="200x145">
-			</div>
-			<div class="ba-width-1-2">
-				<img src="http://placehold.it/600x135/6652AD/fff" alt="600x135">
-			</div>
-			<div class="ba-width-1-3">
-				<img src="http://placehold.it/400x135/6652AD/fff" alt="400x135">
-			</div>
+			<div class="ba-width-1-3"><img src="http://placehold.it/400x185/588CC7/fff" alt="400x185"></div>
+			<div class="ba-width-1-3"><img src="http://placehold.it/400x185/588CC7/fff" alt="400x185"></div>
+			<div class="ba-width-1-6"><img src="http://placehold.it/200x195/588CC7/fff" alt="200x195"></div>
+			<div class="ba-width-1-6"><img src="http://placehold.it/200x195/588CC7/fff" alt="200x195"></div>
+		</div>
+		<div class="ba-grid">
+			<div class="ba-width-1-6"><img src="http://placehold.it/200x145/6652AD/fff" alt="200x145"></div>
+			<div class="ba-width-1-2"><img src="http://placehold.it/600x135/6652AD/fff" alt="600x135"></div>
+			<div class="ba-width-1-3"><img src="http://placehold.it/400x135/6652AD/fff" alt="400x135"></div>
 		</div>
 	</main>
 	</div>
